--- a/cloudino.html
+++ b/cloudino.html
@@ -1,5 +1,9 @@
 <!--
-  Copyright 2013,2014 IBM Corp.
+  Author: Javier Solis, javier.solis@infotec.mx, softjei@gmail.com
+  
+  http://cloudino.io
+ 
+  Copyright 2015 Infotec. http://www.infotec.mx
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
